# qml-gauges

./: .gitignore  .qmlls.ini  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE
.claude/: mcp.json
cmake/: qmllint-critical.sh.in
docs/: DESIGN.md  EXTRACTION_PLAN.md  development.md  qt-6.10-setup.md
explorer/: CMakeLists.txt  main.cpp  stateserver.cpp  stateserver.h
explorer/qml/: Main.qml  Theme.qml
explorer/qml/components/: ComponentSidebar.qml  DocumentationPanel.qml  PreviewArea.qml  PropertyPanel.qml
explorer/qml/editors/: BoolEditor.qml  ColorEditor.qml  EnumEditor.qml  IntEditor.qml  RealEditor.qml  StringEditor.qml
explorer/qml/pages/: Bezel3DPage.qml  CenterCap3DPage.qml  DigitalReadoutPage.qml  GaugeArcPage.qml  GaugeBezelPage.qml  GaugeCenterCapPage.qml  GaugeFacePage.qml  GaugeNeedleClassicPage.qml  GaugeNeedlePage.qml  GaugeNeedleTaperedPage.qml  GaugeNeedleVelocityPage.qml  GaugeTickLabelPage.qml  GaugeTickPage.qml  GaugeTickRingPage.qml  GaugeValueArcPage.qml  GaugeZoneArcPage.qml  RadialGauge3DPage.qml  RadialGaugePage.qml  RollingDigitReadoutPage.qml  WelcomePage.qml
presets/: README.md
presets/GaugeNeedle/: autometer.json
scripts/: build.sh  run-explorer-debug.sh  run-explorer.sh  run-tests.sh  verify-qml-loaders.py
src/: CMakeLists.txt  qmldir
src/compounds/: CMakeLists.txt  DigitalReadout.qml  GaugeNeedle.qml  GaugeTickRing.qml  GaugeValueArc.qml  GaugeZoneArc.qml  RollingDigitReadout.qml  qmldir
src/primitives/: Bezel3D.qml  CMakeLists.txt  CenterCap3D.qml  GaugeArc.qml  GaugeBezel.qml  GaugeCenterCap.qml  GaugeFace.qml  GaugeNeedleClassic.qml  GaugeNeedleTapered.qml  GaugeNeedleVelocity.qml  GaugeTick.qml  GaugeTickLabel.qml  GlassOverlay.qml  NeedleFrontBody.qml  NeedleHeadTip.qml  NeedleRearBody.qml  NeedleTailTip.qml  PerformanceOverlay.qml  qmldir
src/primitives/assets/: Dome.qml  Torus.qml
src/primitives/assets/meshes/: dome_mesh.mesh  torus_mesh.mesh
src/radial/: RadialGauge.qml  RadialGauge3D.qml
tests/: CMakeLists.txt  tst_GaugeArc.qml  tst_GaugeNeedle.qml  tst_GaugeNeedleCompound.qml  tst_RadialGauge.qml  tst_gauges.cpp  tst_qml_loading.cpp
tools/mcp/: README.md  pyproject.toml
tools/mcp/qmlgauges_mcp/: __init__.py  __main__.py  server.py
