[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qmlgauges-mcp"
version = "0.1.0"
description = "MCP server for QML Gauges window inspection and screenshot capture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
qmlgauges-mcp = "qmlgauges_mcp.server:main"
